src/objects/OnlineApplication__c.object
<CustomObject>
    <description>Forseva Online Application Project (OTR application request)</description>
    <fields>
        <fullName>ABA_Routing_Number__c</fullName>
        <label>ABA Routing #</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>AO_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Address</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_Confirm_Social_Security_Number__c</fullName>
        <label>Confirm Social Security #</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>AO_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AO_Date_of_Birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter date of birth in MM/DD/YYYY format.</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AO_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_Home_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Home phone will be called in case of emergency.</inlineHelpText>
        <label>Home Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AO_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_Mobile_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_Social_Security_Number__c</fullName>
        <label>Social Security #</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>AO_State__c</fullName>
        <label>State / Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AO_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AO_Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Treasurer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AO_Work_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AO_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AR_ID_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AR ID Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prepay</fullName>
                </value>
                <value>
                    <fullName>Open Line of Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Online Applications</relationshipLabel>
        <relationshipName>Online_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Verification_Source__c</fullName>
        <label>Business Verification Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equifax</fullName>
                </value>
                <value>
                    <fullName>DNB</fullName>
                </value>
                <value>
                    <fullName>SAFER</fullName>
                </value>
                <value>
                    <fullName>Utility Bill</fullName>
                </value>
                <value>
                    <fullName>Drivers License</fullName>
                </value>
                <value>
                    <fullName>BizID-Pass</fullName>
                </value>
                <value>
                    <fullName>BizID-Fail</fullName>
                </value>
                <value>
                    <fullName>*Other</fullName>
                </value>
                <value>
                    <fullName>Secretary of State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjudication_Time_Days__c</fullName>
        <description>If Decisioned is BLANK, Returned to Sales for Credit Follow-up – Submitted to Credit
Otherwise Decisioned - Submitted to Credit</description>
        <formula>IF(
         ISBLANK(Date_Decisioned__c),
         Returned_to_Sales_for_Credit_Follow_up__c-Submitted_to_Credit__c,
         Date_Decisioned__c - Submitted_to_Credit__c
         
         )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Decisioned is BLANK, Returned to Sales for Credit Follow-up – Submitted to Credit
Otherwise Decisioned - Submitted to Credit</inlineHelpText>
        <label>Adjudication Time (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adverse_action_code__c</fullName>
        <description>Requested by Credit Analyst</description>
        <inlineHelpText>Credit Analyst Use Only</inlineHelpText>
        <label>Adverse action code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>A7</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>E2</fullName>
                </value>
                <value>
                    <fullName>E3</fullName>
                </value>
                <value>
                    <fullName>E4</fullName>
                </value>
                <value>
                    <fullName>F1</fullName>
                </value>
                <value>
                    <fullName>F2</fullName>
                </value>
                <value>
                    <fullName>F3</fullName>
                </value>
                <value>
                    <fullName>F4</fullName>
                </value>
                <value>
                    <fullName>F5</fullName>
                </value>
                <value>
                    <fullName>F6</fullName>
                </value>
                <value>
                    <fullName>F7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Approval_Month__c</fullName>
        <description>Month the application was approved</description>
        <formula>MONTH(DATEVALUE(Date_Decisioned__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Approval Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Created_Month__c</fullName>
        <description>Month the application was created</description>
        <formula>MONTH(DATEVALUE(App_Created__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Created Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Created__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>App_Number__c</fullName>
        <description>app number only</description>
        <formula>right(Name, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Channel__c</fullName>
        <formula>IF(Opportunity__r.SourceSystem__c == &quot;BOCA&quot;, &quot;BOCA&quot;,
  IF(Opportunity__r.SourceSystem__c == &quot;Salesforce&quot;, &quot;Traditional&quot;,
    IF(Opportunity__r.SourceSystem__c == &quot;Echosigned&quot;, &quot;EAPP&quot;,
      IF(Opportunity__c == null, &quot;EAPP&quot;, 
      &quot;&quot;
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Exposure_Hits__c</fullName>
        <label># of Application Exposure Hits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Manager_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Manager ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Signer_IP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Signer IP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Stage__c</fullName>
        <description>This will be set up to be automated based on the Status.</description>
        <inlineHelpText>This will be set up to be automated based on the Status.</inlineHelpText>
        <label>Application Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                    <default>true</default>
                    <label>Application</label>
                </value>
                <value>
                    <fullName>Adjudication</fullName>
                </value>
                <value>
                    <fullName>Credit Follow-up</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Time__c</fullName>
        <description>Duration between App Created and Submitted to Credit. If Submitted to Credit is empty, then # days between today and the Date the App was created.</description>
        <formula>IF(ISBLANK(Submitted_to_Credit__c ), 
(TODAY()- (DATEVALUE(App_Created__c))), 
(Submitted_to_Credit__c)-(App_Created__c))</formula>
        <inlineHelpText>Duration between App Created and Submitted to Credit. If Submitted to Credit is empty, then # days between today and the Date the App was created.</inlineHelpText>
        <label>Application Time (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <description>Was the application approved by a Credit Analyst</description>
        <formula>(CONTAINS(&quot;Approved-Requested:Approved-Counter Offer:Approved-Secured Requested&quot;, TEXT(Credit_Decision__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Audit_Time__c</fullName>
        <formula>IF(ISBLANK(Submitted_to_Card_Services__c), 
  (TODAY()- (DATEVALUE(Submitted_to_Audit__c))), 
  (Submitted_to_Card_Services__c)-(Submitted_to_Audit__c))</formula>
        <inlineHelpText>Submitted to Card Services – Submitted to Audit
                If Submitted to Card Services BLANK, Current Date/Time – Submitted to Audit</inlineHelpText>
        <label>Audit Time (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPAV_Check__c</fullName>
        <label>BPAV Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credit_Decision_Engine_Check</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Account_Setup__c</fullName>
        <label>Bank Account Setup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bankruptcy_Date__c</fullName>
        <label>Bankruptcy Date</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beneficial_Owner_Entity__c</fullName>
        <formula>IF(AND(Opportunity__c != null, Opportunity__r.Beneficial_Owner_Entity__c != null),
HYPERLINK(Opportunity__r.Beneficial_Owner_Entity__c, Opportunity__r.Beneficial_Owner_Entity__r.Name),
HYPERLINK(Beneficial_Owner_Information__c, Beneficial_Owner_Information__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beneficial Owner Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficial_Owner_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beneficial Owner Information</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Beneficial_Owner_Entity__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Beneficial_Owner_Entity__c</referenceTo>
        <relationshipLabel>Online Applications</relationshipLabel>
        <relationshipName>Online_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beneficial_Owner_Status__c</fullName>
        <formula>IF(AND(Opportunity__c != null, Opportunity__r.Beneficial_Owner_Entity__c != null),
TEXT(Opportunity__r.Beneficial_Owner_Entity__r.Verification_Status__c),
TEXT(Beneficial_Owner_Information__r.Verification_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beneficial Owner Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <inlineHelpText>How often would you prefer to be invoiced?</inlineHelpText>
        <label>Billing Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly - 7-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly - 7-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Weekly - 14-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Monthly - 14-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Daily - 7-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Prepay</fullName>
                </value>
                <value>
                    <fullName>Daily – 30 Day Terms</fullName>
                </value>
                <value>
                    <fullName>LLC Billing Cycles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BizID_Error_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BizID Error Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BizID_Error_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BizID Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Branch_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Branch_State__c</fullName>
        <label>Branch State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau_Tax_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bureau Tax ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address Line 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Description__c</fullName>
        <label>Business Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Landscape</fullName>
                </value>
                <value>
                    <fullName>Plumbing, Heating, Air</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Auto Dealer</fullName>
                </value>
                <value>
                    <fullName>Local Trucking</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Passenger Transportation</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Trucking Interstate/Long Haul</fullName>
                </value>
                <value>
                    <fullName>Trucking Local</fullName>
                </value>
                <value>
                    <fullName>Local Delivery</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Your business&apos; physical street address.  Not a PO box (Ex: 123 Main Street).</inlineHelpText>
        <label>Street Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Production_Time__c</fullName>
        <formula>IF(ISBLANK( Cards_Shipped_Date__c ), 
  (TODAY()- (DATEVALUE(Submitted_to_Card_Services__c))), 
  (Cards_Shipped_Date__c )-(Submitted_to_Card_Services__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cards Shipped Date – Submitted to Card Services
                If Cards Shipped Date BLANK, Current Date/Time – Submitted to Card Services</inlineHelpText>
        <label>Card Production Time (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_Setup_Bypassed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only relevant for MasterCard product type offers.</description>
        <inlineHelpText>Only relevant for MasterCard product type offers.</inlineHelpText>
        <label>Card Setup Bypassed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_Address_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Shipping Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Shipping Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_Attention__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Shipping Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Shipping City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_Country__c</fullName>
        <label>Card Shipping Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Shipping_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Shipping First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Shipping Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Shipping_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Shipping Postal Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
</CustomObject>